<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context="com.jmedinilla.offering.MainActivity">

    <TextView
        android:text="@string/main_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/header_size"
        android:id="@+id/main_txv_header" />

    <CheckBox
        android:text="@string/main_ofertas_hogar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/main_cb_hogar" />

    <CheckBox
        android:text="@string/main_ofertas_electronica"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/main_cb_electronica" />

    <CheckBox
        android:text="@string/main_ofertas_deportes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/main_cb_deportes" />

    <CheckBox
        android:text="@string/main_ofertas_importancia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/main_cb_mostrarimportancia" />

    <Button
        android:text="@string/btn_aceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:onClick="accept"
        android:background="@drawable/btn_shape"
        android:id="@+id/main_btn" />

</LinearLayout>
